examples/good/06-01-functions.see
int fibo(int n) {
    if (n <= 2) {
        return 1;
    }
    return fibo(n - 2) + fibo(n - 1);
}

void main() {
    printInt(fibo(5)); // 5

    return;
}
