examples/bad/in/05-01-while.see
void main() {
    int t = 5;
    while (t--) { // valid c++ code...
        printInt(t);
    }

    return;
}
